--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,4 @@
+// build.gradle
 buildscript {
     repositories {
         //new forge repository
@@ -15,18 +16,19 @@ plugins {
 
 apply plugin: "net.minecraftforge.gradle.forge"
 
-version = "1.0"
-group = "com.luna724.binsniper" 
-archivesBaseName = "BinSniper"
+group = 'net.tomochie' // 適宜変更
+version = '13.0'
+archivesBaseName = 'binsniper'
 
 sourceCompatibility = targetCompatibility = 1.8 //using java 8
 compileJava.options.encoding = "UTF-8"
+targetCompatibility = JavaVersion.VERSION_1_8
 
 minecraft {
     version = "1.8.9-11.15.1.2318-1.8.9"
     runDir = "run"
     mappings = "stable_22" //mappings for 1.8.9
-    makeObfSourceJar = false //disable creation of sources jar
+    makeObfSourceJar = true //disable creation of sources jar
 }
 
 configurations {
@@ -35,21 +37,16 @@ configurations {
 }
 
 repositories {
-    //repos for libraries (not gradle plugins)
-    //example:
-    //maven { url "https://repo.dreamys.studio/" }
+    mavenCentral()
+    maven { url "https://repo.minebench.de" }
 }
 
 dependencies {
-    //shade will bundle your library to the output jar
-    //your libraries will be accessible outside of intellij
-    //example:
-    //shade "studio.dreamys:libSkyblock:1.1.1"
-
-    //compile will make your library available only in this dev environment
-    //your libraries wont be accessible outside of intellij
-    //example:
-    //compile "studio.dreamys:libSkyblock:1.1.1"
+//    shade 'com.google.guava:guava:20.0'
+    shade 'net.md-5:bungeecord-config:1.14-SNAPSHOT'
+    shade 'org.apache.commons:commons-lang3:3.10'
+    shade 'com.fasterxml.jackson.core:jackson-core:2.8.11'
+    shade 'com.fasterxml.jackson.core:jackson-databind:2.8.11'
 }
 
 processResources {
@@ -59,7 +56,7 @@ processResources {
 
     //replace stuff in mcmod.info, nothing else
     from(sourceSets.main.resources.srcDirs) {
-        include "mcmod.info"
+        include "binsniper.info"
 
         //replace version and mcversion
         expand "version":project.version, "mcversion":project.minecraft.version
@@ -67,7 +64,7 @@ processResources {
 
     //copy everything else, that"s not the mcmod.info
     from(sourceSets.main.resources.srcDirs) {
-        exclude "mcmod.info"
+        exclude "binsniper.info"
     }
 
     rename '(.+_at.cfg)', 'META-INF/$1'
@@ -86,12 +83,4 @@ shadowJar {
 reobf {
     //reobfuscate the shadowed jar
     shadowJar {}
-}
-
-jar {
-    manifest {
-        attributes([
-            'TweakClass': 'com.luna724.binsniper.BinSniperTweaker'
-        ])
-    }
 }
