--- a/build.gradle
+++ b/build.gradle
@@ -17,8 +17,8 @@ plugins {
 apply plugin: "net.minecraftforge.gradle.forge"
 
 group = 'net.luna724.iloveichika' // 適宜変更
-version = '1.1'
-archivesBaseName = 'BinSniper'
+version = '2.0'
+archivesBaseName = 'Luna\'s BinSniper'
 
 sourceCompatibility = targetCompatibility = 1.8 //using java 8
 compileJava.options.encoding = "UTF-8"
@@ -47,6 +47,8 @@ dependencies {
     shade 'org.apache.commons:commons-lang3:3.10'
     shade 'com.fasterxml.jackson.core:jackson-core:2.8.11'
     shade 'com.fasterxml.jackson.core:jackson-databind:2.8.11'
+
+    compile files('libs/Skytils.jar')
 }
 
 processResources {
